--- a/src/view/javafx_view/ProgramsView.fxml
+++ b/src/view/javafx_view/ProgramsView.fxml
@@ -7,7 +7,7 @@
 
 <AnchorPane prefHeight="584.0" prefWidth="524.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.javafx_controller.ProgramsController">
    <children>
-      <ListView id="ProgramsListView" fx:id="AllProgramsListView" layoutX="4.0" layoutY="37.0" prefHeight="538.0" prefWidth="516.0" />
+      <ListView id="ProgramsListView" fx:id="AllProgramsListView" layoutX="4.0" layoutY="37.0" onMouseClicked="#onMouseClicked" prefHeight="538.0" prefWidth="516.0" />
       <Label alignment="CENTER" layoutX="37.0" layoutY="6.0" prefHeight="23.0" prefWidth="410.0" text="LIST OF PROGRAMS">
          <font>
             <Font name="System Bold" size="18.0" />
