--- a/src/view/javafx_view/MainView.fxml
+++ b/src/view/javafx_view/MainView.fxml
@@ -14,17 +14,16 @@
       <TextField fx:id="PrgStatesTextField" disable="true" layoutX="299.0" layoutY="53.0" prefHeight="25.0" prefWidth="207.0" />
       <TableView fx:id="HeapTableView" layoutX="67.0" layoutY="122.0" prefHeight="234.0" prefWidth="207.0">
         <columns>
-          <TableColumn prefWidth="102.0" text="Address" />
-          <TableColumn prefWidth="104.0" text="Value" />
+          <TableColumn fx:id="HeapAddressCol" prefWidth="102.0" text="Address" />
+          <TableColumn fx:id="HeapValueCol" prefWidth="104.0" text="Value" />
         </columns>
       </TableView>
       <ListView fx:id="OutListView" layoutX="69.0" layoutY="410.0" prefHeight="234.0" prefWidth="207.0" />
-      <ListView fx:id="FileTableListView" layoutX="297.0" layoutY="410.0" prefHeight="234.0" prefWidth="207.0" />
       <ListView fx:id="ProgramIDsListView" layoutX="527.0" layoutY="410.0" onMouseClicked="#onProgramIDListViewClicked" prefHeight="234.0" prefWidth="207.0" />
       <TableView fx:id="SymTableView" layoutX="295.0" layoutY="122.0" prefHeight="234.0" prefWidth="215.0">
         <columns>
-          <TableColumn prefWidth="101.0" text="Name" />
-          <TableColumn prefWidth="113.0" text="Value" />
+          <TableColumn fx:id="SymtableNameCol" prefWidth="101.0" text="Name" />
+          <TableColumn fx:id="SymtableValueCol" prefWidth="113.0" text="Value" />
         </columns>
       </TableView>
       <ListView fx:id="ExeStackListView" layoutX="529.0" layoutY="122.0" prefHeight="234.0" prefWidth="207.0" />
@@ -64,5 +63,11 @@
             <Font name="System Bold" size="15.0" />
          </font>
       </Label>
+      <TableView fx:id="FileTableView" layoutX="294.0" layoutY="410.0" prefHeight="234.0" prefWidth="215.0">
+         <columns>
+            <TableColumn fx:id="FiletableNameCol" prefWidth="101.0" text="Name" />
+            <TableColumn fx:id="FiletableBufCol" prefWidth="113.0" text="Buffered Reader" />
+         </columns>
+      </TableView>
    </children>
 </AnchorPane>
