--- a/src/view/javafx_view/ProgramsView.fxml
+++ b/src/view/javafx_view/ProgramsView.fxml
@@ -5,10 +5,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="584.0" prefWidth="524.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.javafx_controller.ProgramsController">
+<AnchorPane prefHeight="584.0" prefWidth="863.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.javafx_controller.ProgramsController">
    <children>
-      <ListView id="ProgramsListView" fx:id="AllProgramsListView" layoutX="4.0" layoutY="37.0" onMouseClicked="#onMouseClicked" prefHeight="538.0" prefWidth="516.0" />
-      <Label alignment="CENTER" layoutX="37.0" layoutY="6.0" prefHeight="23.0" prefWidth="410.0" text="LIST OF PROGRAMS">
+      <ListView id="ProgramsListView" fx:id="AllProgramsListView" layoutX="11.0" layoutY="37.0" onMouseClicked="#onMouseClicked" prefHeight="543.0" prefWidth="841.0" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="37.0" />
+      <Label alignment="CENTER" layoutX="227.0" layoutY="10.0" prefHeight="23.0" prefWidth="410.0" text="LIST OF PROGRAMS" AnchorPane.leftAnchor="227.0" AnchorPane.rightAnchor="226.0">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
