adding NewLock statement, Lock and Unlock statements + gui implementation

--- a/src/view/javafx_view/MainView.fxml
+++ b/src/view/javafx_view/MainView.fxml
@@ -87,5 +87,16 @@
             <Font name="System Bold" size="15.0" />
          </font>
       </Label>
+      <TableView fx:id="LockTableView" layoutX="395.0" layoutY="640.0" prefHeight="191.0" prefWidth="150.0">
+        <columns>
+          <TableColumn fx:id="LockTableLocation" prefWidth="75.0" text="Location" />
+          <TableColumn fx:id="LockTableValue" prefWidth="75.0" text="Value" />
+        </columns>
+      </TableView>
+      <Label alignment="TOP_CENTER" layoutX="361.0" layoutY="611.0" opacity="0.56" prefHeight="17.0" prefWidth="200.0" text="Lock Table" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
